# chaseapp

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  README.md  WORKSPACE  deps.bzl
api/: .env.example  .gitignore  BUILD.bazel  Dockerfile  README.md  docker-compose.yml  go.mod  test.php
api/API/: .env.yaml-SAMPLE  .gitignore  README.md  addChase.sh  function.go  go.mod  test.formatted  test.json  test.sh  tfr.xml
api/addUser/: .firebaserc  README.md
api/bof/: README.md  birdsOfAFeather.js  findBofs.js  fuck.js  fuck2.js  index.js  package-lock.json  package.json
api/createBundle/: firebase.json
api/fireGetMP4LinkTrigger/: package-lock.json  package.json
api/getRectangle/: README.md  curl-prod.sh  curl.sh  package-lock.json
api/getStreams/: .gitignore  function.go  go.mod
api/getStreamsTest/: Makefile  go.mod  main.go  structs.go
api/migrations/: 000001_create_users_table.up.sql  000002_create_chases_table.down.sql  000002_create_chases_table.up.sql  000003_create_aircraft_table.down.sql  000003_create_aircraft_table.up.sql  000004_create_push_tokens_table.down.sql  000004_create_push_tokens_table.up.sql  000005_create_statistics_table.down.sql  000005_create_statistics_table.up.sql
api/pushPackage/: README.md  createPushPackage.php
api/pusher/: go.mod
api/rocketAPI/: .env.yaml-SAMPLE  .swp  README.md  function.go  go.mod
api/updateRTDB/: .gitignore  README.md  index.js  package.json
api/weatherAPI/: .gitignore  go.mod  main.go
mobile/: BUILD.bazel
web/: .env.example  .eslintignore  .eslintrc.js  .eslintrc.yml  .gitignore  BUILD.bazel  Dockerfile  fume.yml  lighthouserc.json  localhost-key.pem  localhost.pem  nuxt.config.js  package.json  readme.md  tsconfig.json
web/.github/: dependabot.yml
web/components/: Confetti.vue  CookieBox.vue  FAQ.vue  Footer.vue  IconClient.vue  IconLink.vue  Identicon.vue  Logo.vue  LogoCloud.vue  Lottie.vue  Map.vue  ModalDelete.vue  NotifyList.vue  ScrollTop.vue  ScrollTopArrow.vue  Search.vue  Share.vue  SignupStage.vue  SocialHead.vue  TransitionTopToBottom.vue  TrialPeriod.vue  Tweet.vue  Video.vue
web/layouts/: default.vue
web/lib/: PageMeta.ts
web/middleware/: auth.js  cacheControl.ts
web/mixins/: authentication.ts  copyCodeBlock.js
web/pages/: about.vue  chases.vue  index.vue  live2.vue  mock.vue  nodle.vue  privacy.vue  profile.vue  tos.vue  (+2 more)
(+246 files in other folders)
