package(default_visibility = ["//visibility:public"])

# Node.js Firebase/Cloud Function sources.
filegroup(
    name = "node_functions_src",
    srcs = glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/package.json",
            "**/package-lock.json",
        ],
        exclude = [
            "**/node_modules/**",
            "**/lib/**",
            "**/dist/**",
        ],
    ),
)

# Go Cloud Function sources.
filegroup(
    name = "go_functions_src",
    srcs = glob(
        [
            "**/*.go",
            "**/go.mod",
            "**/go.sum",
        ],
        exclude = [
            "**/vendor/**",
            "**/bin/**",
        ],
    ),
)
